scrollbar - fix position right css custom property

--- a/src/scrollbar/scrollbar.module.scss
+++ b/src/scrollbar/scrollbar.module.scss
@@ -28,7 +28,7 @@
     width: var(--width);
     background-color: var(--color);
     position: absolute;
-    right: var(---position-right);
+    right: var(--position-right);
     border-radius: var(--border-radius);
     border: var(--border-size) solid var(--border-color);
     cursor: grab;
